feat: add Quarkus assertions